--- a/.env
+++ b/.env
@@ -16,14 +16,14 @@
 PROXY=""
 #https://link.proxy.tvproxy/proxy/m3u?url=
 
-MFPDD="https://link.proxy.mfp/extractor/video?host=DLHD&d=" 
+MFPDD="https://msette999-test.hf.space" 
 #inserire link mfp
 
-MFPDD2=""  
+MFPDD2="qD5MyE@o9P"  
 #inserire password, lasciare vuoto se si vuole usare mfp senza psw. altrimenti    
 #&redirect_stream=true&api_password=PASSWORD
 
-MFPDDNOPSW="&redirect_stream=true"
+MFPDDNOPSW=""
 #se si usa mfp con psw lasciare vuoto
 
 GUARCAL="sbs"  
@@ -33,23 +33,23 @@ DADDY="dad"
 SKYSTR="stream"  
 #cambiate se skystreaming non prende piu nessun link 
 
-PROXYMFP=""  
+PROXYMFP="https://msette999-test.hf.space?API_PASSWORD=qD5MyE@o9P"  
 #inserire link e password solo per vavoo e skystreaming lasciare vuoto se si usa mfp senza psw altrimenti 
 #https://link.proxy.mfp/proxy/hls/manifest.m3u8?api_password=PASSWORD&d=
 
-PROXYMFPNOPSW="https://link.proxy.mfp/proxy/hls/manifest.m3u8?&d=" 
+PROXYMFPNOPSW="" 
 #inserire link, per mfp senza psw
 
 PROXYMFPMPD="https://link.proxy.mpd/proxy/mpd/manifest.m3u8" 
 # inserire link, serve solo ler mfp quindi hattrick link H e Hd
 
-PSWMFP="PASSWORD"  
+PSWMFP="qD5MyE@o9P"  
 # password mfp per mpd hattrick 
 
 HEADER="&h_user-agent=VAVOO/2.6&h_referer= https://vavoo.to/"
 
-NOMEGITHUB=NOMEGIT   
+NOMEGITHUB=msette999   
 #nome utente di git
 
-NOMEREPO=NOMEREPO  
+NOMEREPO=test2  
 #nome repo di gir default OMGTV
