--- a/.env
+++ b/.env
@@ -19,31 +19,31 @@ PROXY=""
 MFPDD="https://msette999-test.hf.space" 
 #inserire link mfp
 
-MFPDD2="qD5MyE@o9P"  
+MFPDD2=""  
 #inserire password, lasciare vuoto se si vuole usare mfp senza psw. altrimenti    
 #&redirect_stream=true&api_password=PASSWORD
 
-MFPDDNOPSW=""
+MFPDDNOPSW="&redirect_stream=true"
 #se si usa mfp con psw lasciare vuoto
 
-GUARCAL="sbs"  
+GUARCAL="sbs"
 #cambiare se non funzionano i loghi per la serie a verificare sito guardacalcio
 DADDY="dad"   
 #cambiare se daddylive cambka dominio 
 SKYSTR="stream"  
 #cambiate se skystreaming non prende piu nessun link 
 
-PROXYMFP="https://msette999-test.hf.space?API_PASSWORD=qD5MyE@o9P"  
+PROXYMFP=""  
 #inserire link e password solo per vavoo e skystreaming lasciare vuoto se si usa mfp senza psw altrimenti 
 #https://link.proxy.mfp/proxy/hls/manifest.m3u8?api_password=PASSWORD&d=
 
-PROXYMFPNOPSW="" 
+PROXYMFPNOPSW="https://msette999-test.hf.space" 
 #inserire link, per mfp senza psw
 
 PROXYMFPMPD="https://link.proxy.mpd/proxy/mpd/manifest.m3u8" 
 # inserire link, serve solo ler mfp quindi hattrick link H e Hd
 
-PSWMFP="qD5MyE@o9P"  
+PSWMFP="PASSWORD"  
 # password mfp per mpd hattrick 
 
 HEADER="&h_user-agent=VAVOO/2.6&h_referer= https://vavoo.to/"
